kubernetes/ingress-gen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: import-hub.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
